--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
       <version>1.14.2-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.3.2</version>
+    </dependency>
   </dependencies>
 
 </project>
